--- a/different-form-methods.html
+++ b/different-form-methods.html
@@ -10,16 +10,18 @@
 
 <body>
   <!-- clicking on this <a> tag will make a GET / request -->
-  <a href="/">Link to Resource</a>
+  <a href="/">Home</a>
 
   <!-- submitting this <form> will make a GET / request -->
-  <form action="/" method="GET">
-    <button type="submit">GET</button>
+  <form action="/contact" method="GET">
+    <button type="submit">Contact Us</button>
   </form>
 
   <!-- submitting this <form> will make a POST / request -->
-  <form action="/" method="POST">
-    <button type="submit">POST</button>
+  <form action="/login" method="POST">
+    <input type="text" name="username" placeholder="Username">
+    <input type="password" name="password" placeholder="Password">
+    <button type="submit">Sign In</button>
   </form>
 
   <!-- submitting this <form> will make a GET / request -->
